# rust-cpp

./: Cargo.toml  README.md  build.rs
src/: adder.rs  lib.rs
src/ffi/: adder.hpp  mod.rs
test/: Adder.cpp  Makefile  test.cpp
