[package]
name = "libcpp"
version = "0.1.0"
authors = ["HunterSun2018 <sht@palliums.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
cpp = "0.5"

[build-dependencies]
cpp_build = "0.5"