[package]
name = "libcpp"
version = "0.1.0"
authors = ["HunterSun2018 <sht@palliums.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
cpp = "0.5"

serde_json = "1.0.51"
tempdir = "0.3"

anyhow = "1.0.31"
chrono = "0.4.13"
hex = "0.4.2"
proptest = { version = "0.10.0", optional = true }
rustyline = "6.2.0"
rust_decimal = "1.7.0"
num-traits = "0.2.12"
reqwest = { version = "0.10.6", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.114", features = ["derive"] }
structopt = "0.3.15"
walkdir = "2.3.1"

[dev-dependencies]
proptest = "0.10.0"

[features]
default = []
#fuzzing = ["proptest", "libra-crypto/fuzzing", "libra-types/fuzzing"]

[build-dependencies]
cpp_build = "0.5"


[profile.release]
panic = 'abort'